--- a/us-medical-insurance-costs.ipynb
+++ b/us-medical-insurance-costs.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Project Author: <b>Markus Jõeveer</b>"
+    "Project Author: <b>Markus J. (vikemarkus on codecademy)</b>"
    ]
   },
   {
