--- a/us-medical-insurance-costs.ipynb
+++ b/us-medical-insurance-costs.ipynb
@@ -406,7 +406,7 @@
     "poly1d_fn = np.poly1d(coef) \n",
     "# poly1d_fn is now a function which takes in x and returns an estimate for y\n",
     "\n",
-    "plt.plot(x,y, 'go', x, poly1d_fn(x), '--k') #'--k'=black dashed line, 'yo' = yellow circle marker\n",
+    "plt.plot(x,y, 'go', x, poly1d_fn(x), '--k') #'--k'=black dashed line, 'go' = green circle marker\n",
     "\n",
     "plt.xlim(15, 50)\n",
     "plt.ylim(0, 50000)\n",
